k8s/network-policies/allow-api-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-prometheus
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: devops-portfolio-api
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: prometheus
    ports:
    - protocol: TCP
      port: 9090
